fix issue with content layout shift for accordion

--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -50,6 +50,11 @@
     font-size: var(--body-font-size-s);
 }
 
+.accordion .accordion-row .accordion-row-header picture {
+    min-width: 88px;
+    min-height: 58px;
+}
+
 .accordion .accordion-row .accordion-row-content .accordion-row-header .accordion-title-header-container p {
     display: none;
 }
@@ -160,6 +165,11 @@
     .accordion .accordion-row:not(.expanded) .accordion-row-content .accordion-row-header .accordion-title-header-container p::after {
         content: "...";
         position: absolute;
+    }
+
+    .accordion .accordion-row .accordion-row-header picture {
+        min-width: 153px;
+        min-height: 87px;
     }
 
     .accordion .accordion-row.expanded .accordion-row-content > p.item-with-picture-before picture img {
